--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -64,7 +64,7 @@
   padding-top: 8vh;
   padding-bottom: 2vh;
   height: 100vh;
-  background-color: darkslategray;
+  background-color: rgba(0,0,0,0.4);
 }
 
 #footer {
@@ -122,5 +122,13 @@
 
 #error-icon {
   font-size: 250px;
+}
+
+#usericon-desktop {
+  cursor: pointer;
+}
+
+#usericon-mobile {
+  cursor: pointer;
 }
 
